Fix an overflow issue with the dropdown profile menu when the viewport width is less than 767 pixels

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -336,8 +336,7 @@
       }
 
       >.dropdown-menu {
-        position: relative;
-        width: 100%;
+        position: absolute;
         box-shadow: none;
         padding: 0;
         padding-bottom: @padding-large-vertical;
